--- a/main.html
+++ b/main.html
@@ -7,7 +7,17 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test=shoppingList>milk</li>
+		<li data-ns-test=shoppingList>bread</li>
+		<li data-ns-test=shoppingList>oats</li>
+	</ol>
+	<ul>
+		<li data-ns-test=holidayList>temple</li>
+		<li data-ns-test=holidayList>beach</li>
+		<li data-ns-test=holidayList>park</li>
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
